--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,10 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+#clown {
+  max-width: 150px;
+}
+
 *,
 *::before,
 *::after {
